# Hacker-University-of-peiwithhao

./: LICENSE  README.md
AIGC/: README.md
CVEs/: CVE-2021-41073.md
CVEs/CVE-2017-7308/: .gdb_history  README.md  exp  exp.c  exp_2.c
CVEs/CVE-2021-22555/: README.md
CVEs/CVE-2021-41073/: README.md  exploit.c  hog_fs.c
CVEs/CVE-2022-23222/: README.md
archlinux_guide/: Arch linux使用.md  test  test.c
container/: README.md
container/docker/: README.md  Security.md
container/kubernetes/: controller.md  kubelet.md
container/namespaces/: README.md
container/openstack/: README.md
ctf/: README.md  kernel_hack.md  kernelpwn.md
ctf/hacklu_2024/: README.md
ctf/qwb_2024/: README.md
ctf/tcp1p_2024/: README.md
exploit/CVEs/CVE-2017-7308/: README.md  exp.c
exploit/CVEs/CVE-2021-22555/: README.md
exploit/CVEs/CVE-2021-41073/: Makefile  README.md  hog_bpf.c  poc.c
exploit/CVEs/CVE-2022-23222/: README.md
exploit/CVEs/CVE-2022-2588/: .config
exploit/CVEs/CVE-2024-1086/: Makefile  README.md  run.sh
exploit/angr/: .gdb_history  .gitignore  Analyses.md  Instrumentation.md  Loader.md  README.md  Simulation.md  Symbolic.md  cfg.py  getsys.py  state.md  test  test.c  test.py
exploit/ctf/: IOFILE.md  how2heap.md  kernel_hack.md
exploit/ctf/hacklu_2024/: README.md
exploit/ctf/qwb_2024/: README.md  chat-with-me.py  expect_numbers.py
exploit/ctf/tcp1p_2024/: README.md
exploit/fuzz/: README.md
exploit/fuzz/afl++/: AFLplusplusAnalyze.md  README.md
exploit/fuzz/example/: bugs_finder.py  coverage_guiding.py  coverager.py  fuzz_bird.py  mutation_zero.py  sanitize.c  search_decode.py  search_fuzzer.py
exploit/fuzz/libafl/: Custom_Executor.md  README.md  forkserver.md
exploit/fuzz/syzkaller/: README.md
fuse/: README.md
fuse/example/: hog.c
fuzz/: README.md  input.txt  long_fuzz.py
fuzz/afl++/: AFLplusplusAnalyze.md  README.md
fuzz/afl++/challenge_1/: process_fuzz  process_fuzz.c
fuzz/afl++/experiment_2/: README.md
fuzz/afl++/experiment_3/: README.md
fuzz/afl++/experiment_4/: README.md
fuzz/afl++/experiment_5/: README.md
fuzz/afl++/experiment_6/: README.md
fuzz/example/: coverager.py  fuzz_bird.py  http_fuzzer.py  http_mutation_fuzzer.py  long_fuzz.py  mutation_zero.py  search_decode.py  search_fuzzer.py
fuzz/example/fuzzingbook/: FuzzingWithConstraints.py  Reducer.py
fuzz/syzkaller/: README.md  example.txt
io_uring/: Makefile  README.md  cat.c  hog  hog.c  hogo.c
io_uring/readv_experiment/: .gdb_history  BatchRW  BatchRW.c  testfile
netlink/: README.md
netlink/connector/: nl_piggy.c
paper/: THE_HIDDEN_THREAT:ANALYSIS_OF_LINUX_ROOTKIT.md  USING_ROOTKIT_HIDING_TO_CONCEAL_HONEYPOT.md  论文阅读_4_10_2025.md  论文阅读_8_17_2025.md  论文阅读_8_19_2025.md  论文阅读_8_26_2025.md
rootkit/: README.md
rootkit/baby_hide/: .gitignore  Makefile  helper.c  helper.h  hidden.c  hidden.h  pwhrootkit.c  rootkitops.c
rootkit/baby_hook/: Makefile  helper.c  helper.h  pwhrootkit.c  pwhrootkit.h  rootkitops.c  rootkitops.h
rootkit/baby_vm/: .gitignore  build.sh  debug.sh  rootfs.cpio  run.sh  sys_table_finder.c  test.c  use.c
rootkit/experiment_0/: Makefile  pwhrootkit.c  pwhrootkit.h  rootkitops.c
rootkit/experiment_0/baby_vm/: .gdb_history  build.sh  debug.sh  rootfs.cpio  run.sh  use.c
rootkit/experiment_0/include/: hello.h
rootkit/experiment_1/: Makefile  rootkitops.c
system/: README.md  memory_management.md  netfilter.md  qemu-configure.md  vfs.md  watch_queue.md
system/Iot_misc/: iot分析环境部署.md
system/container/cgroup/: README.md  base.md
system/container/kubernetes/: kubelet.md
system/investigate/: CVE-2017-7308.md  CVE-2021-22555.md  CVE调研.md  ChaosEngineering.md  docker_images.md  ext4_part.md  ggCloudEditor.md  k8s_scheduler机制.md  k8s状态攻击调研.md  rootkit_in_k8s.md  vfs.md  伪文件隔离.md  可信启动.md  容器服务测试.md
system/io_uring/: .gdb_history  README.md  hog.c
system/net/: netfilter.md  skb.md
system/net/netlink/: README.md
system/netlink/: README.md
system/sysfs/: README.md
system/virtualization/: kernel_thread.md  vhost_net.md  virtio.md
trace/: README.md
trace/LLVM_TRACE/: README.md
trace/LLVM_TRACE/kernel_project/ctx_finder/: CMakeLists.txt
trace/LLVM_TRACE/kernel_project/ctx_finder/include/: ctxFinder.h
trace/LLVM_TRACE/kernel_project/ctx_finder/src/: ctxFinder.cpp
trace/LLVM_TRACE/kernel_project/kthread_checker/: CMakeLists.txt  kernel_thread.txt  kthread_ops
trace/LLVM_TRACE/kernel_project/kthread_finder/: CMakeLists.txt
trace/LLVM_TRACE/kernel_project/kthread_finder/include/: ktfinder.h  utils.h
trace/LLVM_TRACE/kernel_project/kthread_finder/src/: ktfinder.cpp  utils.cpp
trace/LLVM_TRACE/search_project/: CMakeLists.txt
trace/LLVM_TRACE/search_project/include/: FindSpecificStruct.h
trace/LLVM_TRACE/search_project/input_bc/: structs.bc  structs.c  structs.ll
trace/LLVM_TRACE/search_project/src/: FindSpecificStruct.cpp
trace/LSM/: README.md
trace/audit/: README.md
trace/eBPF/: README.md
trace/perf/: README.md
(+173 files in other folders)
